deployment-example.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cf-ns-sync
  labels:
    app: cf-ns-sync
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cf-ns-sync
  template:
    metadata:
      labels:
        app: cf-ns-sync
    spec:
      serviceAccountName: cf-ns-sync-sa
      containers:
        - name: cf-ns-sync
          image: ghcr.io/das6ng/k8s-cf-ns-sync:latest
          imagePullPolicy: IfNotPresent
          args:
            - --mode
            - exclude
            - --cloudflare-zone
            - "$(CLOUDFLARE_ZONE_NAME)"
            - --cloudflare-api-token
            - "$(CLOUDFLARE_API_TOKEN)"
