test-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-cf-ns-sync
  labels:
    app: cf-ns-sync
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cf-ns-sync
  template:
    metadata:
      labels:
        app: cf-ns-sync
    spec:
      serviceAccountName: cf-ns-sync
      containers:
      - name: cf-ns-sync
        image: dashyeah/cf-ns-sync:latest
        imagePullPolicy: IfNotPresent
